--- a/首页demo copy1.html
+++ b/首页demo copy1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,6 +33,15 @@
 
 .social-link:hover {
   color: #ffffff;
+}
+
+.link-number {
+  color: #FFD700;       /* 金黄色 */
+  text-decoration: none;
+}
+
+.link-number:hover {
+  color: #ffff99;
 }
 
 /* 通用滚动区域样式 */
@@ -140,6 +150,7 @@
   text-align: left;
   margin: 6px 0;
 }
+
 .link {
   font-size: 15px;
   color: #FFD700;
@@ -272,50 +283,66 @@
     }
 
     .carousel-wrapper {
-      width: 100%;
-      max-width: 1280px;
-      margin: 40px auto;
-      position: relative;
-      overflow: hidden;
-      border-radius: 16px;
-    }
+  width: 100%;
+  max-width: 1280px;
+  aspect-ratio: 16 / 6;
+  margin: 40px auto;
+  position: relative;
+  overflow: hidden;
+  border-radius: 16px;
+}
 
-    .carousel {
-      position: relative;
-      width: 100%;
-    }
+.carousel {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 
-    .carousel img {
-      width: 100%;
-      height: auto;
-      display: none;
-      object-fit: contain;
-    }
+.carousel img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: all 0.6s ease-in-out;
+  z-index: 0;
+}
 
-    .carousel img.active {
-      display: block;
-    }
+.carousel img.active {
+  opacity: 1;
+  transform: translateX(0);
+  z-index: 2;
+}
 
-    .carousel-button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0, 0, 0, 0.4);
-      border: none;
-      color: white;
-      font-size: 24px;
-      padding: 10px;
-      cursor: pointer;
-      z-index: 10;
-    }
+.carousel img.exit-left {
+  opacity: 0;
+  transform: translateX(-100%);
+  z-index: 1;
+}
 
-    .carousel-button.left {
-      left: 10px;
-    }
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+  font-size: 24px;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 10;
+}
 
-    .carousel-button.right {
-      right: 10px;
-    }
+.carousel-button.left {
+  left: 10px;
+}
+.carousel-button.right {
+  right: 10px;
+}
+
 
     .section-tabs {
       display: flex;
@@ -418,7 +445,7 @@
   font-size: 13.5px;
   font-weight: 500;
   line-height: 1.3;
-  color: #eee;
+  color: #ffdb3b;
 }
 html, body {
   max-width: 100%;
@@ -459,9 +486,9 @@ html, body {
      <!-- 国际服热门卡片放这里 -->
   <section class="game-list">
     <div class="game-card" data-category="intl">
-      <a href="鸣潮.html">
+      <a href="HOK入口.html">
         <img src="poin.png" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <p class="game-title">国际服王者<br>HONOR OF KINGS</p>
       </a>
     </div>
 
@@ -544,26 +571,41 @@ html, body {
       if (!searchBar.contains(e.target)) input.classList.remove("active");
     });
 
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.carousel img');
 
-    function showSlide(index) {
-      slides.forEach((slide, i) => {
-        slide.classList.toggle('active', i === index);
-      });
-    }
+  let currentSlide = 0;
+  const slides = document.querySelectorAll('.carousel img');
 
-    function nextSlide() {
-      currentSlide = (currentSlide + 1) % slides.length;
-      showSlide(currentSlide);
-    }
+  function showSlide(nextIndex) {
+    if (nextIndex === currentSlide) return;
 
-    function prevSlide() {
-      currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-      showSlide(currentSlide);
-    }
+    const currentImg = slides[currentSlide];
+    const nextImg = slides[nextIndex];
 
-    setInterval(nextSlide, 6000);
+    // 重置状态
+    slides.forEach(slide => slide.classList.remove('active', 'exit-left'));
+
+    // 当前图滑出左侧
+    currentImg.classList.add('exit-left');
+
+    // 新图滑入
+    nextImg.classList.add('active');
+
+    currentSlide = nextIndex;
+  }
+
+  function nextSlide() {
+    const nextIndex = (currentSlide + 1) % slides.length;
+    showSlide(nextIndex);
+  }
+
+  function prevSlide() {
+    const nextIndex = (currentSlide - 1 + slides.length) % slides.length;
+    showSlide(nextIndex);
+  }
+
+  setInterval(nextSlide, 6000); // 每6秒轮播
+  
+
 
     function filterCategory(event, category) {
       const buttons = document.querySelectorAll('.tab-button');
@@ -590,6 +632,7 @@ html, body {
       cards.forEach(card => card.style.display = 'block');
       document.querySelector('.show-more-button').style.display = 'none';
     }
+  
   </script>
 </body>
 <footer class="footer">
@@ -604,7 +647,7 @@ html, body {
       <h3>联系我们</h3>
       <p class="footer-subtitle">营业时间：每日 9:00 - 01:00 (GMT+8)</p>
       <p>WeChat：<span class="link">Brilliant_Gaming</span></p>
-      <p>WhatsApp：<span class="link">+6012 445-8242</span></p>
+      <p>WhatsApp：<a href="https://wa.me/60123456789" class="link-number">+6012 445-8242</a></span></p>
     </div>
 
     <div class="footer-section">
@@ -636,11 +679,12 @@ html, body {
     </div>
     <div class="footer-section">
       <h3 class="footer-title">Follow Us</h3>
-<p>关注我们 Instagram 频道<BR>获取独家游戏活动、充值优惠<BR>新游上线第一时间掌握！</p>
+<p class="footer-subtitle">
+  关注我们 Instagram 频道<BR>获取独家游戏活动、充值优惠<BR>新游上线第一时间掌握！</p>
 
 <a href="https://www.instagram.com/Brilliant.Gaming.Enterprise" target="_blank" class="social-link">
   <i class="fab fa-instagram"></i>
-  <span class="link-text">@Brilliant.Gaming.Enterprise</span>
+  <span class="link-text">Brilliant.Gaming.Enterprise</span>
 </a>
 <a href="https://www.instagram.com/Brilliant.Gaming.Enterprise" target="_blank" class="social-link">
   <i class="fab fa-facebook"></i>
@@ -655,36 +699,9 @@ html, body {
   <div class="footer-bottom">
     <div class="footer-links">
 
-      <a href="#">免责声明</a>
-      <h2>免责声明</h2>
-<p>Brilliant Gaming 为独立的第三方手游代充平台，所提供的充值服务均通过正规授权渠道完成。</p>
-<p>本平台与各游戏官方（如腾讯、网易、米哈游等）无直接隶属关系，游戏版权归原开发商所有。</p>
-<p>用户需提供正确的游戏账号信息，一旦充值成功恕不退款；因信息错误导致的损失由用户自行承担。</p>
-<p>在法律允许范围内，Brilliant Gaming 不对任何因使用本平台服务所引发的直接或间接损失承担责任。</p>
-
-      <a href="#">使用条款</a>
-      <h2>使用条款</h2>
-<p>在使用 Brilliant Gaming 提供的服务前，您需仔细阅读并同意以下条款：</p>
-
-<ul>
-  <li>1. 用户在下单前必须确保提供的游戏账号信息（如 UID、区服、角色名等）完整且正确。</li>
-  <li>2. 支付完成后系统将尽快处理订单，一般在 1~10 分钟内到账，如遇特殊情况（如维护、系统延迟）可能会延长。</li>
-  <li>3. 所有订单一经充值，除特殊情况外恕不接受取消、退款。</li>
-  <li>4. 禁止使用本平台进行洗钱、欺诈等违法行为，一经发现将立即封禁账号并配合执法机关调查。</li>
-</ul>
-<p>Brilliant Gaming 有权在不另行通知的情况下对服务条款进行修改，用户在使用服务时应定期查阅。</p>
-
-      <a href="#">隐私政策</a>
-      <h2>隐私政策</h2>
-<p>我们非常重视您的个人信息安全与隐私保护，以下为 Brilliant Gaming 的隐私政策摘要：</p>
-
-<ul>
-  <li>1. 我们仅收集完成充值所需的必要信息（如游戏账号、支付截图、联系方式）。</li>
-  <li>2. 您的个人信息不会被出售、交换或共享给任何未经授权的第三方。</li>
-  <li>3. 所有信息仅用于订单处理与售后服务，不会用于其他用途。</li>
-  <li>4. 我们采用加密技术和人工审核双重保障您的数据安全。</li>
-</ul>
-<p>若您对我们的隐私政策有任何疑问，请通过客服渠道联系我们。</p>
+      <a href="Foot免责声明.html">免责声明</a>
+      <a href="Foot使用条款.html">使用条款</a>
+      <a href="Foot隐私政策.html">隐私政策</a>
 
     </div>
     <p>© 2025 Brilliant Gaming. All rights reserved.</p>
