--- a/garena/CODM/CODM.html
+++ b/garena/CODM/CODM.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Garena AOV</title>
+  <title> Garena CODM</title>
   <style>
     body {
       margin: 0;
@@ -192,10 +192,10 @@
   <div class="currency-toggle" onclick="toggleCurrency()"><span id="currency-label">MYR</span></div>
 
   <div class="banner-container">
-    <img src="Aov/aovbg.png" alt="HOKBG Banner">
+    <img src="CODMBG.PNG" alt="HOKBG Banner">
   </div>
 <div class="logo-section">
-  <img src="../logo.png" alt="Brilliant Gaming Logo" class="logo-img">
+  <img src="../../logo.png" alt="Brilliant Gaming Logo" class="logo-img">
   <p class="logo-subtitle">让充值更简单 · 更划算 · 更安全</p>
 </p>
   
@@ -267,16 +267,16 @@ const cart = [];
 let cartOpen = false;
 
 const productList = [
-  { name: '91 Voucher', rm: 8, sgd: 3, img: 'Aov/v1.png' },
-  { name: '230 Voucher', rm: 16, sgd: 5.5, img: 'Aov/v2.png' },
-  { name: '345 Voucher', rm: 24, sgd: 8, img: 'Aov/v2.png' },
-  { name: '599 Voucher', rm: 40, sgd: 13.5, img: 'Aov/v3.png' },
-  { name: '873 Voucher', rm: 60, sgd: 20, img: 'Aov/v3.png' },
-  { name: '1746 Voucher', rm: 117, sgd: 39, img: 'Aov/v4.png' },
-  { name: '3492 Voucher', rm: 222, sgd: 74, img: 'Aov/v5.png' },
-  { name: '5238 Voucher', rm: 324, sgd: 108, img: 'Aov/v6.png' },
-  { name: '6984 Voucher', rm: 420, sgd: 136, img: 'Aov/v7.png' },
-  { name: '8730 Voucher', rm: 525, sgd: 169, img: 'Aov/v7.png' }
+  { name: '230 + 23 CP', rm: 10.8, sgd: 3.6, img: 'cp0.png' },
+  { name: '460 + 69 CP', rm: 21, sgd: 7, img: 'cp1.png' },
+  { name: '690 + 104 CP', rm: 31, sgd: 10.5, img: 'cp2.png' },
+  { name: '1150 + 173 CP', rm: 50, sgd: 17, img: 'cp3.png' },
+  { name: '2300 + 460 CP', rm: 95, sgd: 32.5, img: 'cp4.png' },
+  { name: '4600 + 1840 CP', rm: 185, sgd: 62, img: 'cp4.png' },
+  { name: '6900 + 3680 CP', rm: 280, sgd: 93, img: 'cp5.png' },
+  { name: '9200 + 3680 CP', rm: 360, sgd: 120, img: 'cp5.png' },
+  { name: '13800 + 5520 CP', rm: 540, sgd: 174, img: 'cp6.png' },
+  { name: '18400 + 7360 CP', rm: 720, sgd: 232, img: 'cp6.png' }
 ];// 用原始产品列表替换这里
 
 function renderProducts() {
