--- a/首页demo.html
+++ b/首页demo.html
@@ -458,7 +458,7 @@ html, body {
 <body>
   <header>
     <div class="logo-search">
-      <a href="index.html">
+      <a href="首页demo.html">
         <img src="空.png" alt="Brilliant Gaming Logo" />
       </a>
     </div>
@@ -516,40 +516,40 @@ html, body {
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="poin.png" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <p class="game-title">鸣潮<br>WUTHERING WAVES</p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="mlbb.html">
+        <img src="图片/MLBB/mlbblogo.jpg" alt="鸣潮" />
+        <p class="game-title">MOBILE LEGEND<br>BANG BANG</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
-      <a href="鸣潮.html">
-        <img src="poin.png" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+      <a href="garena/CODM/CODM.html">
+        <img src="garena/CODM/codm.png" alt="鸣潮" />
+        <p class="game-title">GARENA<br>CALL OF DUTY M</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
-      <a href="鸣潮.html">
-        <img src="poin.png" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+      <a href="garena/Delta Force/Delta Force.html">
+        <img src="garena/Delta Force/Delta.png" alt="鸣潮" />
+        <p class="game-title">GARENA<br>DELTA FORCE</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
-      <a href="鸣潮.html">
-        <img src="poin.png" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
+      <a href="garena/Delta Force/Delta Force.html">
+        <img src="图片/Pokemon TCG/宝可梦logo.png" alt="鸣潮" />
+        <p class="game-title">GARENA<br>DELTA FORCE</p>
       </a>
     </div>
 
-        <div class="game-card" data-category="intl">
-      <a href="鸣潮.html">
-        <img src="poin.png" alt="鸣潮" />
-        <p class="game-title">鸣潮<br>Wuthering Waves</p>
-      </a>
-    </div>
-
-<a href="腾讯.html" class="game-card more-button-card">
+<a href="更多国际游戏.html" class="game-card more-button-card">
   <div class="game-title">查看更多游戏</div>
 </a>
 
