--- a/garena/Delta Force/Delta Force.html
+++ b/garena/Delta Force/Delta Force.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Mobile Legend MLBB - Brilliant Gaming</title>
+  <title> Garena CODM</title>
   <style>
-    
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -193,22 +192,22 @@
   <div class="currency-toggle" onclick="toggleCurrency()"><span id="currency-label">MYR</span></div>
 
   <div class="banner-container">
-    <img src="MLBBBG.png" alt="HOKBG Banner">
+    <img src="CODMBG.PNG" alt="HOKBG Banner">
   </div>
 <div class="logo-section">
-  <img src="logo.png" alt="Brilliant Gaming Logo" class="logo-img">
+  <img src="../../logo.png" alt="Brilliant Gaming Logo" class="logo-img">
   <p class="logo-subtitle">让充值更简单 · 更划算 · 更安全</p>
 </p>
   
 <p style="font-size: 20px; color: #00ffff; line-height: 1.6; margin-top: 10px;">
-  📌 只需要 <strong style="color:#FFD700;">Player ID & Zone ID</strong> 即可完成充值～<br>
+  📌 只需要 <strong style="color:#FFD700;">Player ID & 游戏名字</strong> 即可完成充值～<br>
   📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
 </p>
   </div>
   </section>
   <div class="section-title"></div>
   <div class="price-grid" id="price-grid"></div>
-  <a href="index.html" class="back-button">← 返回首页</a>
+  <a href="../../index.html" class="back-button">← 返回首页</a>
   <div id="cart-toggle" onclick="toggleCart()">🛒 购物车 (<span id="cart-count">0</span>)</div>
 
   <div id="cart-panel">
@@ -268,16 +267,16 @@ const cart = [];
 let cartOpen = false;
 
 const productList = [
-  { name: '双系统 60 点券', rm: 6, sgd: 2, img: '王者荣耀点券.png' },
-  { name: '双系统 180 点券', rm: 15, sgd: 5, img: '王者荣耀点券.png' },
-  { name: '双系统 300 点券', rm: 25, sgd: 8, img: '王者荣耀点券.png' },
-  { name: '双系统 680 点券', rm: 50, sgd: 17, img: '王者荣耀点券.png' },
-  { name: '双系统 1180 点券', rm: 82, sgd: 27, img: '王者荣耀点券.png' },
-  { name: '双系统 1980 点券', rm: 132, sgd: 43, img: '王者荣耀点券.png' },
-  { name: '双系统 3480 点券', rm: 224, sgd: 74, img: '王者荣耀点券.png' },
-  { name: '双系统 6480 点券', rm: 410, sgd: 136, img: '王者荣耀点券.png' },
-  { name: '双系统 8980 点券', rm: 570, sgd: 184, img: '王者荣耀点券.png' },
-  { name: '双系统 12980 点券', rm: 810, sgd: 262, img: '王者荣耀点券.png' }
+  { name: '230 + 23 CP', rm: 10.8, sgd: 3.6, img: 'cp0.png' },
+  { name: '460 + 69 CP', rm: 21, sgd: 7, img: 'cp1.png' },
+  { name: '690 + 104 CP', rm: 31, sgd: 10.5, img: 'cp2.png' },
+  { name: '1150 + 173 CP', rm: 50, sgd: 17, img: 'cp3.png' },
+  { name: '2300 + 460 CP', rm: 95, sgd: 32.5, img: 'cp4.png' },
+  { name: '4600 + 1840 CP', rm: 185, sgd: 62, img: 'cp4.png' },
+  { name: '6900 + 3680 CP', rm: 280, sgd: 93, img: 'cp5.png' },
+  { name: '9200 + 3680 CP', rm: 360, sgd: 120, img: 'cp5.png' },
+  { name: '13800 + 5520 CP', rm: 540, sgd: 174, img: 'cp6.png' },
+  { name: '18400 + 7360 CP', rm: 720, sgd: 232, img: 'cp6.png' }
 ];// 用原始产品列表替换这里
 
 function renderProducts() {
