--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -9,6 +9,42 @@
   <link rel="stylesheet" href="styles.css" />
   <style>
 
+.search-bar-pro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 480px;
+  margin: 20px auto;
+  background-color: rgba(20, 20, 20, 0.9);
+  border: 1px solid #00ffff55;
+  border-radius: 8px;
+  padding: 6px 12px;
+  box-shadow: 0 0 6px rgba(0,255,255,0.1);
+}
+
+.search-bar-pro input {
+  flex: 1;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 16px;
+  padding: 8px;
+}
+
+.search-btn {
+  background: none;
+  border: none;
+  color: #00ffff;
+  font-size: 20px;
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+
+.search-btn:hover {
+  color: #ffffff;
+}
+
 .social-link {
   
   color: #00f7ff;
@@ -282,68 +318,6 @@
       display: none;
     }
 
-    .carousel-wrapper {
-  width: 100%;
-  max-width: 1280px;
-  aspect-ratio: 16 / 6;
-  margin: 40px auto;
-  position: relative;
-  overflow: hidden;
-  border-radius: 16px;
-}
-
-.carousel {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.carousel img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  opacity: 0;
-  transform: translateX(100%);
-  transition: all 0.6s ease-in-out;
-  z-index: 0;
-}
-
-.carousel img.active {
-  opacity: 1;
-  transform: translateX(0);
-  z-index: 2;
-}
-
-.carousel img.exit-left {
-  opacity: 0;
-  transform: translateX(-100%);
-  z-index: 1;
-}
-
-.carousel-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.5);
-  border: none;
-  color: white;
-  font-size: 24px;
-  padding: 10px;
-  cursor: pointer;
-  z-index: 10;
-}
-
-.carousel-button.left {
-  left: 10px;
-}
-.carousel-button.right {
-  right: 10px;
-}
-
-
     .section-tabs {
       display: flex;
       justify-content: center;
@@ -462,27 +436,12 @@ html, body {
         <img src="空.png" alt="Brilliant Gaming Logo" />
       </a>
     </div>
+<div class="search-bar-pro">
+  <input type="text" placeholder="输入游戏名称..." id="searchInputPro">
+  <button class="search-btn"><i class="fas fa-search"></i></button>
+</div>
 
   </header>
-
-  <div class="carousel-wrapper">
-    <div class="carousel">
-      <button class="carousel-button left" onclick="prevSlide()">&#10094;</button>
-      <button class="carousel-button right" onclick="nextSlide()">&#10095;</button>
-      <img src="近期活动 动画/动画1.png" alt="轮播图1" class="active">
-      <img src="近期活动 动画/动画2.png" alt="轮播图2">
-      <img src="近期活动 动画/动画3.png" alt="轮播图3">
-    </div>
-  </div>
-
-  <div class="section-tabs">
-    <button class="tab-button active" onclick="filterCategory(event, 'intl')">国际服游戏</button>
-    <button class="tab-button" onclick="filterCategory(event, 'cn')">中国服游戏</button>
-    <button class="tab-button" onclick="filterCategory(event, 'stream')">直播</button>
-    <button class="tab-button" onclick="filterCategory(event, 'card')">点卡</button>
-    <button class="tab-button" onclick="filterCategory(event, 'other')">其他服务</button>
-  </div>
-
 
      <!-- 国际服热门卡片放这里 -->
   <section class="game-list">
@@ -571,41 +530,6 @@ html, body {
       const searchBar = document.querySelector(".search-bar");
       if (!searchBar.contains(e.target)) input.classList.remove("active");
     });
-
-
-  let currentSlide = 0;
-  const slides = document.querySelectorAll('.carousel img');
-
-  function showSlide(nextIndex) {
-    if (nextIndex === currentSlide) return;
-
-    const currentImg = slides[currentSlide];
-    const nextImg = slides[nextIndex];
-
-    // 重置状态
-    slides.forEach(slide => slide.classList.remove('active', 'exit-left'));
-
-    // 当前图滑出左侧
-    currentImg.classList.add('exit-left');
-
-    // 新图滑入
-    nextImg.classList.add('active');
-
-    currentSlide = nextIndex;
-  }
-
-  function nextSlide() {
-    const nextIndex = (currentSlide + 1) % slides.length;
-    showSlide(nextIndex);
-  }
-
-  function prevSlide() {
-    const nextIndex = (currentSlide - 1 + slides.length) % slides.length;
-    showSlide(nextIndex);
-  }
-
-  setInterval(nextSlide, 6000); // 每6秒轮播
-  
 
 
     function filterCategory(event, category) {
