--- a/首页demo.html
+++ b/首页demo.html
@@ -485,68 +485,69 @@ html, body {
   <section class="game-list">
     <div class="game-card" data-category="intl">
       <a href="HOK入口.html">
-        <img src="图片/游戏logo (3).png" alt="鸣潮" />
+        <img src="图片/游戏logo (3).png" alt="" />
         <p class="game-title">国际服王者<br>HONOR OF KINGS</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="原神.html">
-        <img src="图片/原神/原神LOGO.png" alt="鸣潮" />
+        <img src="游戏LOGO/原神.png" alt="" />
         <p class="game-title">原神<br>GENSHIN IMPACT<br></p>
       </a>
     </div>
     
         <div class="game-card" data-category="intl">
       <a href="崩坏.html">
-        <img src="图片/崩坏/崩坏LOGO.png" alt="鸣潮" />
+        <img src="游戏LOGO/崩坏.png" alt="" />
         <p class="game-title">崩坏：星穹铁道<br>HONKAI：STAR RAIL</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="绝区.html">
-        <img src="图片/绝区零/绝区logo.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/绝区零.png" alt="" />
         <p class="game-title">绝区零<br>ZENLESS ZONE ZERO</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/鸣潮.png" alt="" />
         <p class="game-title">鸣潮<br>WUTHERING WAVES</p>
       </a>
     </div>
 
     <div class="game-card" data-category="intl">
       <a href="mlbb.html">
-        <img src="图片/MLBB/mlbblogo.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/mlbb.png" alt="" />
         <p class="game-title">MOBILE LEGEND<br>BANG BANG</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/CODM/CODM.html">
-        <img src="garena/CODM/codm.png" alt="鸣潮" />
+        <img src="游戏LOGO/cod.png" alt="" />
         <p class="game-title">GARENA<br>CALL OF DUTY M</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/Delta Force/Delta Force.html">
-        <img src="garena/Delta Force/Delta.png" alt="鸣潮" />
+        <img src="游戏LOGO/Delta.png" alt="" />
         <p class="game-title">GARENA<br>DELTA FORCE</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/Delta Force/Delta Force.html">
-        <img src="图片/Pokemon TCG/宝可梦logo.png" alt="鸣潮" />
-        <p class="game-title">GARENA<br>DELTA FORCE</p>
+        <img src="游戏LOGO/tcg.png" alt="鸣潮" />
+        <p class="game-title">POKEMON<br>TCG POCKET</p>
       </a>
     </div>
 
 <a href="更多国际游戏.html" class="game-card more-button-card">
+  <img src="游戏LOGO/查看更多.png" alt="鸣潮" />
   <div class="game-title">查看更多游戏</div>
 </a>
 
