--- a/首页demo.html
+++ b/首页demo.html
@@ -283,9 +283,9 @@
     }
 
     .carousel-wrapper {
-  width: 80%;
+  width: 90%;
   max-width: 1280px;
-  aspect-ratio: 16 / 6;
+   height: 480px;
   margin: 40px auto;
   position: relative;
   overflow: hidden;
