--- a/首页demo.html
+++ b/首页demo.html
@@ -285,7 +285,7 @@
     .carousel-wrapper {
   width: 90%;
   max-width: 1280px;
-   height: 320px;
+  aspect-ratio: 16 / 7;
   margin: 40px auto;
   position: relative;
   overflow: hidden;
