--- a/首页demo copy.html
+++ b/首页demo copy.html
@@ -283,9 +283,9 @@
     }
 
     .carousel-wrapper {
-  width: 100%;
+  width: 90%;
   max-width: 1280px;
-  aspect-ratio: 16 / 6;
+  aspect-ratio: 16 / 9;
   margin: 40px auto;
   position: relative;
   overflow: hidden;
@@ -327,14 +327,33 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.5);
-  border: none;
-  color: white;
-  font-size: 24px;
-  padding: 10px;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.08); /* 半透明白色 */
+  border: 1px solid rgba(255, 255, 255, 0.3); /* 轻微边框 */
+  backdrop-filter: blur(8px); /* 模糊背景 */
+  -webkit-backdrop-filter: blur(8px);
+  color: #ffffff;
+  font-size: 20px;
   cursor: pointer;
   z-index: 10;
+  box-shadow: 0 0 8px rgba(0, 255, 255, 0.2);
+  transition: all 0.3s ease;
 }
+
+.carousel-button:hover {
+  background: rgba(0, 255, 255, 0.2);
+  border-color: #00ffff;
+  box-shadow: 0 0 16px rgba(0, 255, 255, 0.4);
+  color: #00ffff;
+}
+
+<button class="carousel-button left" onclick="prevSlide()"><i class="fas fa-chevron-left"></i></button>
+
+<button class="carousel-button right" onclick="nextSlide()"><i class="fas fa-chevron-right"></i></button>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 .carousel-button.left {
   left: 10px;
@@ -419,7 +438,7 @@
   justify-content: flex-start;
   padding: 0;
   background: transparent;
-  border-radius: 100px 100px 0 0;
+  border-radius: 20px 20px 0 0;
   overflow: hidden;
   transition: transform 0.2s ease;
 }
@@ -485,68 +504,69 @@ html, body {
   <section class="game-list">
     <div class="game-card" data-category="intl">
       <a href="HOK入口.html">
-        <img src="游戏LOGO/学.png" alt="鸣潮" />
+        <img src="图片/游戏logo (3).png" alt="" />
         <p class="game-title">国际服王者<br>HONOR OF KINGS</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="原神.html">
-        <img src="图片/原神/原神LOGO.png" alt="鸣潮" />
+        <img src="游戏LOGO/原神.png" alt="" />
         <p class="game-title">原神<br>GENSHIN IMPACT<br></p>
       </a>
     </div>
     
         <div class="game-card" data-category="intl">
       <a href="崩坏.html">
-        <img src="图片/崩坏/崩坏LOGO.png" alt="鸣潮" />
+        <img src="游戏LOGO/崩坏.png" alt="" />
         <p class="game-title">崩坏：星穹铁道<br>HONKAI：STAR RAIL</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="绝区.html">
-        <img src="图片/绝区零/绝区logo.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/绝区零.png" alt="" />
         <p class="game-title">绝区零<br>ZENLESS ZONE ZERO</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="鸣潮.html">
-        <img src="图片/鸣潮/鸣潮LOGO.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/鸣潮.png" alt="" />
         <p class="game-title">鸣潮<br>WUTHERING WAVES</p>
       </a>
     </div>
 
     <div class="game-card" data-category="intl">
       <a href="mlbb.html">
-        <img src="图片/MLBB/mlbblogo.jpg" alt="鸣潮" />
+        <img src="游戏LOGO/mlbb.png" alt="" />
         <p class="game-title">MOBILE LEGEND<br>BANG BANG</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/CODM/CODM.html">
-        <img src="garena/CODM/codm.png" alt="鸣潮" />
+        <img src="游戏LOGO/cod.png" alt="" />
         <p class="game-title">GARENA<br>CALL OF DUTY M</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/Delta Force/Delta Force.html">
-        <img src="garena/Delta Force/Delta.png" alt="鸣潮" />
+        <img src="游戏LOGO/Delta.png" alt="" />
         <p class="game-title">GARENA<br>DELTA FORCE</p>
       </a>
     </div>
 
         <div class="game-card" data-category="intl">
       <a href="garena/Delta Force/Delta Force.html">
-        <img src="图片/Pokemon TCG/宝可梦logo.png" alt="鸣潮" />
-        <p class="game-title">GARENA<br>DELTA FORCE</p>
+        <img src="游戏LOGO/tcg.png" alt="鸣潮" />
+        <p class="game-title">POKEMON<br>TCG POCKET</p>
       </a>
     </div>
 
 <a href="更多国际游戏.html" class="game-card more-button-card">
+  <img src="游戏LOGO/查看更多.png" alt="鸣潮" />
   <div class="game-title">查看更多游戏</div>
 </a>
 
