--- a/首页demo copy 2.html
+++ b/首页demo copy 2.html
@@ -283,7 +283,7 @@
     }
 
     .carousel-wrapper {
-  width: 100%;
+  width: 90%;
   max-width: 1280px;
   aspect-ratio: 16 / 7;
   margin: 40px auto;
@@ -340,14 +340,6 @@
   z-index: 10;
   box-shadow: 0 0 8px rgba(0, 255, 255, 0.2);
   transition: all 0.3s ease;
-}
-
-@media (max-width: 768px) {
-  .carousel-button {
-    font-size: 18px;       /* 缩小字体箭头 */
-    padding: 6px 8px;       /* 缩小按钮区域 */
-    border-radius: 6px;
-  }
 }
 
 .carousel-button:hover {
@@ -493,9 +485,9 @@ html, body {
     <div class="carousel">
       <button class="carousel-button left" onclick="prevSlide()">&#10094;</button>
       <button class="carousel-button right" onclick="nextSlide()">&#10095;</button>
-      
-      <img src="近期活动 动画/动画1.png" alt="轮播图4" class="active">
-
+      <img src="近期活动 动画/动画1.png" alt="轮播图1" class="active">
+      <img src="近期活动 动画/动画2.png" alt="轮播图2">
+      <img src="近期活动 动画/动画3.png" alt="轮播图3">
     </div>
   </div>
 
