--- a/首页demo.html
+++ b/首页demo.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <meta charset="UTF-8" />
@@ -243,11 +242,6 @@
   }
 }
 
-@media (max-width: 768px) {
-  .carousel-button {
-    display: none;
-  }
-}
 
     .search-bar {
       position: absolute;
@@ -289,7 +283,7 @@
     }
 
     .carousel-wrapper {
-  width: 90%;
+  width: 100%;
   max-width: 1280px;
   aspect-ratio: 16 / 7;
   margin: 40px auto;
@@ -348,12 +342,26 @@
   transition: all 0.3s ease;
 }
 
+@media (max-width: 768px) {
+  .carousel-button {
+    font-size: 18px;       /* 缩小字体箭头 */
+    padding: 6px 8px;       /* 缩小按钮区域 */
+    border-radius: 6px;
+  }
+}
+
 .carousel-button:hover {
   background: rgba(0, 255, 255, 0.2);
   border-color: #00ffff;
   box-shadow: 0 0 16px rgba(0, 255, 255, 0.4);
   color: #00ffff;
 }
+
+<button class="carousel-button left" onclick="prevSlide()"><i class="fas fa-chevron-left"></i></button>
+
+<button class="carousel-button right" onclick="nextSlide()"><i class="fas fa-chevron-right"></i></button>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 .carousel-button.left {
   left: 10px;
@@ -472,7 +480,6 @@ html, body {
   </style>
 </head>
 <body>
-  
   <header>
     <div class="logo-search">
       <a href="首页demo.html">
@@ -486,9 +493,9 @@ html, body {
     <div class="carousel">
       <button class="carousel-button left" onclick="prevSlide()">&#10094;</button>
       <button class="carousel-button right" onclick="nextSlide()">&#10095;</button>
-      <img src="近期活动 动画/动画1.png" alt="轮播图1" class="active">
-      <img src="近期活动 动画/动画2.png" alt="轮播图2">
-      <img src="近期活动 动画/动画3.png" alt="轮播图3">
+      
+      <img src="近期活动 动画/动画1.png" alt="轮播图4" class="active">
+
     </div>
   </div>
 
@@ -634,6 +641,7 @@ html, body {
 
   let currentSlide = 0;
   const slides = document.querySelectorAll('.carousel img');
+  let slideTimer = null;
 
   function showSlide(nextIndex) {
     if (nextIndex === currentSlide) return;
@@ -641,16 +649,12 @@ html, body {
     const currentImg = slides[currentSlide];
     const nextImg = slides[nextIndex];
 
-    // 重置状态
     slides.forEach(slide => slide.classList.remove('active', 'exit-left'));
-
-    // 当前图滑出左侧
     currentImg.classList.add('exit-left');
-
-    // 新图滑入
     nextImg.classList.add('active');
-
     currentSlide = nextIndex;
+
+    resetAutoSlide(); // 每次手动切换后重置计时器
   }
 
   function nextSlide() {
@@ -663,27 +667,30 @@ html, body {
     showSlide(nextIndex);
   }
 
-  setInterval(nextSlide, 6000); // 每6秒轮播
-  
-// 👇 手机滑动功能
-let startX = 0;
-let endX = 0;
-
-const carousel = document.querySelector('.carousel');
-
-carousel.addEventListener('touchstart', function (e) {
-  startX = e.touches[0].clientX;
-});
-
-carousel.addEventListener('touchend', function (e) {
-  endX = e.changedTouches[0].clientX;
-
-  if (startX - endX > 50) {
-    nextSlide(); // 左滑
-  } else if (endX - startX > 50) {
-    prevSlide(); // 右滑
+  function resetAutoSlide() {
+    if (slideTimer) clearInterval(slideTimer);
+    slideTimer = setInterval(nextSlide, 6000);
   }
-});
+
+  resetAutoSlide(); // 初始化轮播
+
+  // 👇 手机滑动功能
+  const carousel = document.querySelector('.carousel');
+  let startX = 0;
+  let endX = 0;
+
+  carousel.addEventListener('touchstart', function (e) {
+    startX = e.touches[0].clientX;
+  });
+
+  carousel.addEventListener('touchend', function (e) {
+    endX = e.changedTouches[0].clientX;
+    if (startX - endX > 50) {
+      nextSlide(); // 左滑
+    } else if (endX - startX > 50) {
+      prevSlide(); // 右滑
+    }
+  });
 
 
     function filterCategory(event, category) {
