--- a/首页demo.html
+++ b/首页demo.html
@@ -495,6 +495,8 @@ html, body {
       <button class="carousel-button right" onclick="nextSlide()">&#10095;</button>
       
       <img src="近期活动 动画/动画1.png" alt="轮播图4" class="active">
+      <img src="近期活动 动画/动画2.png" alt="轮播图2">
+      <img src="近期活动 动画/动画3.png" alt="轮播图3">
 
     </div>
   </div>
