--- a/首页demo.html
+++ b/首页demo.html
@@ -347,6 +347,7 @@
     font-size: 18px;       /* 缩小字体箭头 */
     padding: 6px 8px;       /* 缩小按钮区域 */
     border-radius: 6px;
+   display: none;    
   }
 }
 
@@ -356,13 +357,6 @@
   box-shadow: 0 0 16px rgba(0, 255, 255, 0.4);
   color: #00ffff;
 }
-
-<button class="carousel-button left" onclick="prevSlide()"><i class="fas fa-chevron-left"></i></button>
-
-<button class="carousel-button right" onclick="nextSlide()"><i class="fas fa-chevron-right"></i></button>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 .carousel-button.left {
   left: 10px;
 }
