--- a/首页demo.html
+++ b/首页demo.html
@@ -488,10 +488,13 @@ html, body {
       <button class="carousel-button left" onclick="prevSlide()">&#10094;</button>
       <button class="carousel-button right" onclick="nextSlide()">&#10095;</button>
       
-      <img src="近期活动 动画/动画1.png" alt="轮播图4" class="active">
+      <img src="近期活动 动画/动画1.png" alt="轮播图1" class="active">
       <img src="近期活动 动画/动画2.png" alt="轮播图2">
       <img src="近期活动 动画/动画3.png" alt="轮播图3">
-
+      <img src="近期活动 动画/动画4.png" alt="轮播图4">
+      <img src="近期活动 动画/动画5.png" alt="轮播图5">
+      <img src="近期活动 动画/动画6.png" alt="轮播图6">
+      <img src="近期活动 动画/动画7.png" alt="轮播图7">
     </div>
   </div>
 
@@ -569,7 +572,15 @@ html, body {
       </a>
     </div>
 
-<a href="更多国际游戏.html" class="game-card more-button-card">
+    <div class="game-card" data-category="">
+      <a href="国际服游戏/Valorant/Valorant.html">
+        <img src="国际服游戏/Valorant/3217.webp" alt="鸣潮" />
+        <p class="game-title">Valorant<br></p>
+      </a>
+    </div>
+
+      <div class="game-card" data-category="intl">
+<a href="更多国际游戏.html">
   <img src="游戏LOGO/查看更多.png" alt="鸣潮" />
   <div class="game-title">查看更多游戏</div>
 </a>
